coceo_software_template/backend/err.txt
G:\Meu Drive\01 - Nova Estrutura\Trabalhos\FOCCUS\Softwares\VORTEX\backend\middleware\rbacMiddleware.js:37
                return next(new AppError('PERM-002', \`Acesso negado: falha de permissão para \${action} em \${module}.\${resource}\`, 403));
                                                     ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (G:\Meu Drive\01 - Nova Estrutura\Trabalhos\FOCCUS\Softwares\VORTEX\backend\modules\cash\index.js:13:31)